ARS 9 Generic Query Retrieve V1 (2019-12-16)
 * Removed unneeded info values from info.xml.

ARS 9 Generic Query Retrieve V1 (2018-07-06)
 * Initial version.  See README for details.