@@ -1,4 +1,7 @@
-ARS 9 Generic Query Retrieve V1 (2019-12-16)
+ARS 9 Generic Query Retrieve V1 (2021-01-06)
+ * Adjusted the escape method to include apostrophes.
+ 
+ ARS 9 Generic Query Retrieve V1 (2019-12-16)
  * Removed unneeded info values from info.xml.
 
 ARS 9 Generic Query Retrieve V1 (2018-07-06)
